--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google-cloud/local-auth": "^2.1.0",
     "framer-motion": "^10.16.4",
+    "googleapis": "^105.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
